--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 *.log
 *.sql
 *.sqlite
+.DS_Store
 .DS_Store?
 ._*
 .Spotlight-V100
@@ -23,4 +24,9 @@
 ehthumbs.db
 Thumbs.db
 client/.DS_Store
+.DS_Store
+.DS_Store
+*.DS_Store
+.DS_Store
+.DS_Store
 
